--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     </head>
     <body>
         <header>
-            <div class="l-header"></div>
+            <div class="l-header">
+                <div class="hamburger-menu">
+                    <div class="l-header__icon">
+                        <div class="l-header-icon__line"></div>
+                        <div class="l-header-icon__line"></div>
+                    </div>
+                </div>
+            </div>
         </header>
         <main>
             <section id="hero">
@@ -34,7 +41,7 @@
                 <div class="container">
                     <h1>
                         <img src="./assets/img/Group 3060.png" alt="" class="guide" />
-                        INFORMTION
+                        INFORMATION
                         <p class="subtitle">お知らせ</p>
                     </h1>
                     <div class="wrapper">
@@ -111,32 +118,35 @@
             <section id="event">
                 <div class="menus">
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2798.png" width="56px" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>ふれあい <br />イベント</div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2800.png" width="176px" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>グラウンドメイン <br />イベント</div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2804.png" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>お楽しみ <br />イベント</div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2805.png" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>チケット</div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2806.png" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>グルメ</div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 2962.png" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>
+                            グッズ• <br />
+                            ファンクラブ
+                        </div>
+                        <p>&#128899;</p>
                     </div>
                     <div class="menu-item">
-                        <img src="./assets/img/Group 3078.png" alt="" />
-                        <img src="./assets/img/Path 2393.png" alt="" class="down" />
+                        <div>その他</div>
+                        <p>&#128899;</p>
                     </div>
                 </div>
                 <div class="container">
@@ -160,33 +170,33 @@
                             <div class="block">
                                 <div class="btn-item">
                                     選手と自撮り！写真撮影会
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     選手とキャッチボール体験
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     レオ＆ライナとの写真撮影会！
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     bluelegendsとの写真撮影会！
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                             </div>
                             <div class="block">
                                 <div class="btn-item">
                                     選手と一緒に入ろう！足湯グリーティング
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     写真撮影もできる!選手サイン会
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     キッズお悩み相談
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                             </div>
                         </div>
@@ -197,37 +207,37 @@
                             <div class="block">
                                 <div class="btn-item">
                                     野球体験コーナー
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     プレイヤーズロード
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     ハイタッチ&カイロ配布
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     あっち向いてホイ
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                             </div>
                             <div class="block">
                                 <div class="btn-item">
                                     西武球場前駅_アナウンス
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     ピッチングチャレンジ
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     チャリティーオークション
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                                 <div class="btn-item">
                                     Lステージ
-                                    <img src="./assets/img/Path 2441.png" class="right" alt="" />
+                                    <p>&#128898;</p>
                                 </div>
                             </div>
                         </div>
@@ -238,32 +248,112 @@
                 </div>
             </section>
             <section id="others">
+                <img src="./assets/img/kirakira_hidari.png" alt="" class="hidari" />
+                <img src="./assets/img/kirakira_migi.png" alt="" class="migi" />
                 <div class="container">
                     <div class="cards-wrapper">
                         <div class="card1">
-                            <img src="./assets/img/選手1.png" alt="" class="person1" />
+                            <img src="./assets/img/選手1.png" alt="" class="person" />
                             <div class="title">
                                 EVENT
-                                <img src="./assets/img/Group 2879.png" alt="" />
+                                <img src="./assets/img/Group 2879.png" alt="" class="event1" />
                             </div>
                             <div class="content">
                                 コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。
                             </div>
                         </div>
                         <div class="card2">
-                            <img src="./assets/img/選手2.png" alt="" class="person2" />
+                            <img src="./assets/img/選手2.png" alt="" class="person" />
                             <div class="title">
                                 EVENT
-                                <img src="./assets/img/Group 2879.png" alt="" />
+                                <img src="./assets/img/Group 2881.png" alt="" class="event2" />
                             </div>
                             <div class="content">
                                 コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。
                             </div>
                         </div>
                     </div>
+                    <div class="cards-wrapper">
+                        <div class="card1">
+                            <img src="./assets/img/選手2.png" alt="" class="person second" />
+                            <div class="title">
+                                TICKET
+                                <img src="./assets/img/Group 2884.png" alt="" class="ticket" />
+                            </div>
+                            <div class="content">
+                                <div class="menu">
+                                    <div class="item">
+                                        <div class="text">チケット詳細</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                    <div class="item">
+                                        <div class="text">アリーナシート</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                    <div class="item">
+                                        <div class="text">チケットオプション</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card2">
+                            <img src="./assets/img/選手1.png" alt="" class="person second" />
+                            <div class="title">
+                                GOURMET
+                                <img src="./assets/img/Group 2886.png" alt="" class="gourmet" />
+                            </div>
+                            <div class="content">
+                                コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-wrapper">
+                        <div class="card1">
+                            <img src="./assets/img/選手1.png" alt="" class="person" />
+                            <div class="title">
+                                GOODS
+                                <img src="./assets/img/Group 2888.png" alt="" class="goods" />
+                            </div>
+                            <div class="content">
+                                コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。コピーが入ります。
+                            </div>
+                        </div>
+                        <div class="card2">
+                            <img src="./assets/img/選手2.png" alt="" class="person" />
+                            <div class="title">
+                                OTHERS
+                                <img src="./assets/img/Group 2890.png" class="etc" alt="" />
+                            </div>
+                            <div class="content">
+                                <div class="menu">
+                                    <div class="item">
+                                        <div class="text">チケット詳細</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                    <div class="item">
+                                        <div class="text">アリーナシート</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                    <div class="item">
+                                        <div class="text">チケットオプション</div>
+                                        <p>&#128898;</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer">
+                        <div class="logo">
+                            <img src="./assets/img/Group 3064.png" alt="" class="left-img" />
+                            <img src="./assets/img/Group 1809.png" alt="" class="logo-img" />
+                            <img src="./assets/img/Group 3066.png" alt="" class="right-img" />
+                        </div>
+                        <div class="publisher">埼玉西武ライオンズ公式サイトへ</div>
+                        <div class="copyright">©SEIBU Lions / TEZUKA PRODUCTIONS All Rights Reserved</div>
+                    </div>
                 </div>
             </section>
         </main>
-        <footer></footer>
     </body>
 </html>
